fix content centering on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 .column-right img {
-    width: 350px;
+    width: 320px;
 }
 
 .footer {
